--- a/style.css
+++ b/style.css
@@ -9,6 +9,13 @@ body {
     flex-direction: column;
     height: 100vh;
     text-align: center;
+        font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+
+.headr-desc{
+    display: flex;
+    justify-content: space-between;
 }
 
 .header {
@@ -18,16 +25,38 @@ body {
     padding: 8px;
     box-sizing: border-box;
 }
+.header-title{
+    display: flex;
+    justify-content: space-between;
+    margin: 8px;
+}
+.links {
+    margin: 8px;
+    padding: 24px;
+}
 
 .hero-main {
     font-size: 48px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+}
+
+a{
+    padding: 8px;
+}
+
+.hero-sec{
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    font-size: 24px;
 }
 
 .wheel-gif {
     border-radius: 25px;
     border: 2px black;
+    display: flex;
+    justify-content: center;
 }
 
 .fish img {
@@ -48,6 +77,7 @@ body {
 
 .info {
     padding: 72px;
+    font-size: 24px;
 }
 
 .title {
@@ -61,11 +91,18 @@ body {
     background-color: #e5e7eb;
     margin: 0;
     padding: 100px;
-    font-size: 32px;
+    font-size: 36px;
 }
 
 .Sign-up {
-    padding: 72px;
+    margin: 72px;
+}
+
+button{
+    padding:  25px 50px;
+    border-radius: 50px;
+    box-shadow: 5px black;
+    border: #e5e7eb;
 }
 
 .footer {
